# hyperfold-game

./: .gitignore  Cargo.toml
refactor/: .gitignore  Cargo.toml
refactor/engine/: Cargo.toml  build.rs
refactor/engine/macros/: Cargo.toml
refactor/engine/macros/src/: lib.rs
refactor/engine/parser/: Cargo.toml
refactor/engine/parser/src/: lib.rs  util.rs
refactor/engine/parser/src/codegen/: codegen.rs  dependency.rs  idents.rs  mod.rs  mods.rs  structs.rs  system.rs  util.rs
refactor/engine/parser/src/parse/: ast_crate.rs  ast_file.rs  ast_fn_arg.rs  ast_mod.rs  mod.rs
refactor/engine/parser/src/resolve/: ast_items.rs  ast_paths.rs  ast_resolve.rs
refactor/engine/parser/src/validate/: ast_item_list.rs  ast_pathing.rs  ast_system.rs  ast_validate.rs  constants.rs  mod.rs
refactor/engine/shared/: Cargo.toml
refactor/engine/shared/macros/: Cargo.toml
refactor/engine/shared/macros/src/: lib.rs
refactor/engine/shared/src/: file.rs  lib.rs
refactor/engine/src/: intersect.rs  lib.rs  sdl2_bindings.rs  sdl2_image_bindings.rs
refactor/engine/src/ecs/: components.rs  entities.rs  events.rs
refactor/engine/src/framework/: event_system.rs  mod.rs  physics.rs  render_system.rs
refactor/engine/src/utils/: event.rs  mod.rs  pointers.rs  rect.rs
refactor/src/: ast_attrs.rs  ast_crate.rs  ast_file.rs  ast_mod.rs  ast_use.rs  ast_visitor.rs  main.rs  util.rs
src/: crystal.rs  fireball.rs  main.rs  param_dag.rs  text_wizard.rs  upgrades.rs  wizard.rs
src/enemies/: enemy.rs  mod.rs  spawner.rs
src/utils/: elevations.rs  mod.rs  rand_sign.rs  timer.rs
(+39 files in other folders)
