[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["proc-macro"]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
regex = "1.7.3"
shared = { path = "../shared" }
parser = { path = "../parser" }

[dependencies.syn]
version = "2.0.15"
features = ["full"]
