[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse_cfg = "3.1.0"
proc-macro2 = "1.0.56"
quote = "1.0.26"
regex = "1.8.1"
syn = { version = "2.0.15", features = ["full", "visit"] }
toml = "0.7.3"
shared = { path = "../shared" }
